--- a/i/i-/i-a/i-am-bored.com.html
+++ b/i/i-/i-a/i-am-bored.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the i-am-bored.com privacy policy that was archived on 2013-12-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131209091243id_/http%3A//www.i-am-bored.com/im_bored_privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the i-am-bored.com privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301221357id_/http%3A//www.i-am-bored.com/im_bored_privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 		<title>I Am Bored - Sites for when you're bored.</title>
@@ -224,7 +224,7 @@ COMSCORE.beacon({
             strTag = strTag.replace('%dx%', "");
         }
 		document.write(strTag);
-		</script><script language="JavaScript" src="http://ad.doubleclick.net/adj/dmd.iambored/community;sz=728x90;cat=;ctype=;rating=;aff=;;pub_url=${i-am-bored.com};envr=;dcopt=ist;dc_ref=https://web.archive.org/web/20131209091243id_/http%3A//www.i-am-bored.com/im_bored_privacy.asp;tile=1;ord=2368755945556351?" type="text/javascript"></script><noscript><a href="http://ad.doubleclick.net/jump/dmd.iambored/community;sz=728x90;cat=;ctype=;rating=;aff=;pub_url=${i-am-bored.com};envr=;tile=1;ord=201312911245?" target="_blank"><img src="http://ad.doubleclick.net/ad/dmd.iambored/community;sz=728x90;cat=;ctype=;rating=;aff=;pub_url=${i-am-bored.com};envr=;tile=1;ord=201312911245?" width="728" height="90" border="0" alt=""></a></noscript>
+		</script><script language="JavaScript" src="http://ad.doubleclick.net/adj/dmd.iambored/community;sz=728x90;cat=;ctype=;rating=;aff=;;pub_url=${i-am-bored.com};envr=;dcopt=ist;dc_ref=https://web.archive.org/web/20140301221357id_/http%3A//www.i-am-bored.com/im_bored_privacy.asp;tile=1;ord=5206523231403040?" type="text/javascript"></script><noscript><a href="http://ad.doubleclick.net/jump/dmd.iambored/community;sz=728x90;cat=;ctype=;rating=;aff=;pub_url=${i-am-bored.com};envr=;tile=1;ord=201431141359?" target="_blank"><img src="http://ad.doubleclick.net/ad/dmd.iambored/community;sz=728x90;cat=;ctype=;rating=;aff=;pub_url=${i-am-bored.com};envr=;tile=1;ord=201431141359?" width="728" height="90" border="0" alt=""></a></noscript>
 		<!-- End: DartAdTag -->
 		</div>
 
@@ -328,8 +328,8 @@ COMSCORE.beacon({
             strTag = strTag.replace('%dx%', "");
         }
 		document.write(strTag);
-		</script><iframe class="AdModule" src="http://ad.doubleclick.net/adi/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;;pub_url=${i-am-bored.com};envr=;loc=atf;dc_ref=https://web.archive.org/web/20131209091243id_/http%3A//www.i-am-bored.com/im_bored_privacy.asp;tile=2;ord=2368755945556351?" width="300" height="250" marginwidth="0" marginheight="0" frameborder="0" scrolling="no"><script language="JavaScript" src="http://ad.doubleclick.net/adj/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;%dx%;pub_url=${i-am-bored.com};envr=;loc=atf;dc_ref=https://web.archive.org/web/20131209091243id_/http%3A//www.i-am-bored.com/im_bored_privacy.asp;abr=!ie;tile=2;ord=2368755945556351?" type="text/javascript"></script></iframe>
-		<noscript><a href="http://ad.doubleclick.net/jump/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;pub_url=${i-am-bored.com};envr=;loc=atf;abr=!ie4;abr=!ie5;abr=!ie6;tile=2;ord=201312911245?" target="_blank"><img src="http://ad.doubleclick.net/ad/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;pub_url=${i-am-bored.com};envr=;loc=atf;abr=!ie4;abr=!ie5;abr=!ie6;tile=2;ord=201312911245?" width="300" height="250" border="0" alt=""></a></noscript>
+		</script><iframe class="AdModule" src="http://ad.doubleclick.net/adi/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;;pub_url=${i-am-bored.com};envr=;loc=atf;dc_ref=https://web.archive.org/web/20140301221357id_/http%3A//www.i-am-bored.com/im_bored_privacy.asp;tile=2;ord=5206523231403040?" width="300" height="250" marginwidth="0" marginheight="0" frameborder="0" scrolling="no"><script language="JavaScript" src="http://ad.doubleclick.net/adj/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;%dx%;pub_url=${i-am-bored.com};envr=;loc=atf;dc_ref=https://web.archive.org/web/20140301221357id_/http%3A//www.i-am-bored.com/im_bored_privacy.asp;abr=!ie;tile=2;ord=5206523231403040?" type="text/javascript"></script></iframe>
+		<noscript><a href="http://ad.doubleclick.net/jump/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;pub_url=${i-am-bored.com};envr=;loc=atf;abr=!ie4;abr=!ie5;abr=!ie6;tile=2;ord=201431141359?" target="_blank"><img src="http://ad.doubleclick.net/ad/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;pub_url=${i-am-bored.com};envr=;loc=atf;abr=!ie4;abr=!ie5;abr=!ie6;tile=2;ord=201431141359?" width="300" height="250" border="0" alt=""></a></noscript>
 		<!-- End: DartAdTag -->
 
 
@@ -395,8 +395,8 @@ COMSCORE.beacon({
             strTag = strTag.replace('%dx%', "");
         }
 		document.write(strTag);
-		</script><iframe class="AdModule" src="http://ad.doubleclick.net/adi/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;;pub_url=${i-am-bored.com};envr=;loc=btf;dc_ref=https://web.archive.org/web/20131209091243id_/http%3A//www.i-am-bored.com/im_bored_privacy.asp;tile=3;ord=2368755945556351?" width="300" height="250" marginwidth="0" marginheight="0" frameborder="0" scrolling="no"><script language="JavaScript" src="http://ad.doubleclick.net/adj/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;%dx%;pub_url=${i-am-bored.com};envr=;loc=btf;dc_ref=https://web.archive.org/web/20131209091243id_/http%3A//www.i-am-bored.com/im_bored_privacy.asp;abr=!ie;tile=3;ord=2368755945556351?" type="text/javascript"></script></iframe>
-		<noscript><a href="http://ad.doubleclick.net/jump/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;pub_url=${i-am-bored.com};envr=;loc=btf;abr=!ie4;abr=!ie5;abr=!ie6;tile=3;ord=201312911245?" target="_blank"><img src="http://ad.doubleclick.net/ad/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;pub_url=${i-am-bored.com};envr=;loc=btf;abr=!ie4;abr=!ie5;abr=!ie6;tile=3;ord=201312911245?" width="300" height="250" border="0" alt=""></a></noscript>
+		</script><iframe class="AdModule" src="http://ad.doubleclick.net/adi/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;;pub_url=${i-am-bored.com};envr=;loc=btf;dc_ref=https://web.archive.org/web/20140301221357id_/http%3A//www.i-am-bored.com/im_bored_privacy.asp;tile=3;ord=5206523231403040?" width="300" height="250" marginwidth="0" marginheight="0" frameborder="0" scrolling="no"><script language="JavaScript" src="http://ad.doubleclick.net/adj/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;%dx%;pub_url=${i-am-bored.com};envr=;loc=btf;dc_ref=https://web.archive.org/web/20140301221357id_/http%3A//www.i-am-bored.com/im_bored_privacy.asp;abr=!ie;tile=3;ord=5206523231403040?" type="text/javascript"></script></iframe>
+		<noscript><a href="http://ad.doubleclick.net/jump/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;pub_url=${i-am-bored.com};envr=;loc=btf;abr=!ie4;abr=!ie5;abr=!ie6;tile=3;ord=201431141359?" target="_blank"><img src="http://ad.doubleclick.net/ad/dmd.iambored/community;sz=300x250;cat=;ctype=;rating=;aff=;pub_url=${i-am-bored.com};envr=;loc=btf;abr=!ie4;abr=!ie5;abr=!ie6;tile=3;ord=201431141359?" width="300" height="250" border="0" alt=""></a></noscript>
 		<!-- End: DartAdTag -->
 
 
@@ -570,7 +570,7 @@ In the course of serving advertisements to this site, our third-party advertiser
 	<a href="http://www.i-am-bored.com/im_bored_copyright.asp">Copyright Policy</a> | 
 	<a href="http://www.i-am-bored.com/im_bored_rss.asp"><img align="absmiddle" src="http://cdn-www.i-am-bored.com/art/rss.gif" border="0"></a>
 	<br>
-	© 2013 Demand Media, Inc. All rights reserved.<br>
+	© 2014 Demand Media, Inc. All rights reserved.<br>
 	<img src="http://cdn-www.i-am-bored.com/ui/images/driven-by-demand-media.png" border="0" vspace="5">
 </span>
 </center>
@@ -646,7 +646,7 @@ if (!myHandle)
     document.write(casaleU+'&amp;f=1&amp;id='+casaleR+'"><\/scr'+'ipt>');
 }
 
-//--></script><script type="text/javascript" src="http://as.casalemedia.com/s?s=109543&amp;u=https%3A//web.archive.org/web/20131209091243id_/http%253A//www.i-am-bored.com/im_bored_privacy.asp&amp;f=1&amp;id=1749512055.208922"></script>
+//--></script><script type="text/javascript" src="http://as.casalemedia.com/s?s=109543&amp;u=https%3A//web.archive.org/web/20140301221357id_/http%253A//www.i-am-bored.com/im_bored_privacy.asp&amp;f=1&amp;id=1749515102.6783824"></script>
 <!-- DO NOT MODIFY -->
 
 <script type="text/javascript">
