--- a/n/ne/neo/neogaf.com.html
+++ b/n/ne/neo/neogaf.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the neogaf.com privacy policy that was archived on 2013-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131205122720id_/http%3A//www.neogaf.com/forum/showthread.php%3Ft%3D390709) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the neogaf.com privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301223446id_/http%3A//www.neogaf.com/forum/showthread.php%3Ft%3D390709) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en"><head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -2731,7 +2731,7 @@ if (window.adgroupid == undefined) {
 }
 document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtechus.com/addyn/3.0/5259.1/2845291/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp='+window.adgroupid+';misc='+new Date().getTime()+'"></scri'+'pt>');
 //-->
-</script><script language="javascript1.1" src="http://adserver.adtechus.com/addyn/3.0/5259.1/2845291/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=529;misc=1582149874862"></script><noscript><a href="http://adserver.adtechus.com/adlink/3.0/5259.1/2845291/0/225/ADTECH;loc=300;key=key1+key2+key3+key4" target="_blank"><img src="http://adserver.adtechus.com/adserv/3.0/5259.1/2845291/0/225/ADTECH;loc=300;key=key1+key2+key3+key4" border="0" width="728" height="90"></a></noscript>
+</script><script language="javascript1.1" src="http://adserver.adtechus.com/addyn/3.0/5259.1/2845291/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=506;misc=1582149877423"></script><noscript><a href="http://adserver.adtechus.com/adlink/3.0/5259.1/2845291/0/225/ADTECH;loc=300;key=key1+key2+key3+key4" target="_blank"><img src="http://adserver.adtechus.com/adserv/3.0/5259.1/2845291/0/225/ADTECH;loc=300;key=key1+key2+key3+key4" border="0" width="728" height="90"></a></noscript>
 <!-- End of JavaScript Tag -->
 
 
@@ -2832,7 +2832,7 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtechu
 		
 			
 				<div class="postbit-details-avatar">
-					<a href="member.php?u=4"><img class="inlineimg" src="http://asset3.neogaf.com/forum/image.php?u=4&amp;dateline=1377898600" width="100" height="117" alt="EviLore's Avatar" border="0" title="EviLore's Avatar"></a>
+					<a href="member.php?u=4"><img class="inlineimg" src="http://asset3.neogaf.com/forum/image.php?u=4&amp;dateline=1388617950" width="100" height="120" alt="EviLore's Avatar" border="0" title="EviLore's Avatar"></a>
 				</div>
 			
 		
@@ -2930,7 +2930,7 @@ window.adgroupid = Math.round(Math.random() * 1000);
 }
 document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtechus.com/addyn/3.0/5259.1/2845469/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp='+window.adgroupid+';misc='+new Date().getTime()+'"></scri'+'pt>');
 //-->
-</script><script language="javascript1.1" src="http://adserver.adtechus.com/addyn/3.0/5259.1/2845469/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=529;misc=1582149874867"></script>
+</script><script language="javascript1.1" src="http://adserver.adtechus.com/addyn/3.0/5259.1/2845469/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=506;misc=1582149877426"></script>
 		</div>
 	</div>
 
@@ -3043,14 +3043,14 @@ if (window.adgroupid == undefined) {
 }
 document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtechus.com/addyn/3.0/5259.1/2845289/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp='+window.adgroupid+';misc='+new Date().getTime()+'"></scri'+'pt>');
 //-->
-</script><script language="javascript1.1" src="http://adserver.adtechus.com/addyn/3.0/5259.1/2845289/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=529;misc=1582149874882"></script><noscript><a href="http://adserver.adtechus.com/adlink/3.0/5259.1/2845289/0/225/ADTECH;loc=300;key=key1+key2+key3+key4" target="_blank"><img src="http://adserver.adtechus.com/adserv/3.0/5259.1/2845289/0/225/ADTECH;loc=300;key=key1+key2+key3+key4" border="0" width="728" height="90"></a></noscript>
+</script><script language="javascript1.1" src="http://adserver.adtechus.com/addyn/3.0/5259.1/2845289/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=506;misc=1582149877428"></script><noscript><a href="http://adserver.adtechus.com/adlink/3.0/5259.1/2845289/0/225/ADTECH;loc=300;key=key1+key2+key3+key4" target="_blank"><img src="http://adserver.adtechus.com/adserv/3.0/5259.1/2845289/0/225/ADTECH;loc=300;key=key1+key2+key3+key4" border="0" width="728" height="90"></a></noscript>
 <!-- End of JavaScript Tag -->
 				</div>
 			</div>
 
 			<div class="footer-links clearfix">
 				<span class="left">
-					All times are GMT +1. The time now is <span class="time">01:27 PM</span>.
+					All times are GMT +1. The time now is <span class="time">11:34 PM</span>.
 					
 				</span>
 				<span class="right">
@@ -3064,6 +3064,8 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtechu
 
 <!--  -->
 </form>
+
+
 <!-- viglink begin -->
 <script type="text/javascript">
 	var vglnk = { api_url: '//api.viglink.com/api', key: 'de2ccb8ca8943c06669720e0a267a9f6' };
@@ -3074,22 +3076,23 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtechu
 	}(document, 'script'));
 </script>
 <!-- viglink end -->
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
+
+<!-- ANALYTICS CODE   -->
 <script type="text/javascript">
-	_uacct = "UA-288310-1";
-	urchinTracker();
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-288310-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
 </script>
-<!-- ANALYTICS CODE  (test) -->
-<script type="text/javascript">
-	var _gaq = _gaq || [];
-	_gaq.push(['_setAccount', 'UA-34358095-1']);
-	_gaq.push(['_trackPageview']);
-	(function() {
-		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	})();
-</script>
+
+
 
 
 <script type="text/javascript">
