--- a/p/pu/pul/pulse360.com.html
+++ b/p/pu/pul/pulse360.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the pulse360.com privacy policy that was archived on 2013-10-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131010200334id_/http%3A//www.pulse360.com/page/network-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pulse360.com privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301225933id_/http%3A//www.pulse360.com/page/network-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Pulse360</title> 
    
-	<base href="http://pulse360.com/">
+	<base href="http://www.pulse360.com/">
 	<meta name="description" content="">
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
 
@@ -290,7 +290,7 @@
 
         
         <div class="span4" style="text-align:right;">
-            <h4>www.pulse360.com © 2013</h4>
+            <h4>www.pulse360.com © 2014</h4>
             <p style="text-align:right;">All right reserved.</p>
             <img src="/images/index/logo_footer.png">
         </div>
