--- a/l/li/lik/liketly.com.html
+++ b/l/li/lik/liketly.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the liketly.com privacy policy that was archived on 2016-03-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160314175437id_/https%3A//www.liketly.com/policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the liketly.com privacy policy that was archived on 2017-04-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170402220014id_/https%3A//www.liketly.com/policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en"><head>
  
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=fb690a32f5/cloudflare.min.js"></script><script type="text/javascript">
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=f2befc48d1/cloudflare.min.js"></script><script type="text/javascript">
 //<![CDATA[
-try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"a196b5dd528d1ef97bc8a01a555e6bf1",petok:"25e41ab03e7c929f952b2f895b7d30d977282b95-1457978082-1800",zone:"liketly.com",rocket:"0",apps:{"ga_key":{"ua":"UA-37743166-1","ga_bs":"2"}},sha2test:0}];!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=fb690a32f5/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
+try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"843c0ea80b6fcc8aa69de2271d9ee4dc",petok:"d5a4f486aeb2c6d4568752910127ee580cb7d36c-1491170415-1800",zone:"liketly.com",rocket:"0",apps:{"ga_key":{"ua":"UA-37743166-1","ga_bs":"2"}}}];!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=f2befc48d1/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
 //]]>
 </script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -260,14 +260,14 @@ Privacy and Confidentiality Statements
 <center>
 <style type="text/css">.wtfcounter-user{padding:20px 0;}.wtfcounter-user span{background:#6699FF;color:#fff;font-size:32px;border:1px solid #fff;border-radius:6px;padding:0px 5px;box-shadow:0px 2px 4px #333;}.wtfcounter-user span.no_style{color:#6699FF;padding:0px;border:0;background:transparent;box-shadow:0 0 0;}</style>
 <div class="wtfcounter-user">
-<span>7</span>
-<span class="no_style">,</span>
-<span>0</span>
-<span>8</span>
-<span>2</span>
-<span class="no_style">,</span>
 <span>9</span>
-<span>1</span>
+<span class="no_style">,</span>
+<span>2</span>
+<span>9</span>
+<span>5</span>
+<span class="no_style">,</span>
+<span>7</span>
+<span>3</span>
 <span>5</span>
 <span class="no_style">Members</span>
 </div>
@@ -382,7 +382,7 @@ LiketLy © · <a href="#" id="select_lang_pack">English (US)</a> · </div>
 				}
 				
 				var LoadedTinymceEditors = {};
-				/* ketnooi $Behavior.loadTinymceEditor_1879696d4bf92db439134f6b675f2392 = function()*/
+				/* ketnooi $Behavior.loadTinymceEditor_2c6f7c0963fddd7b7ae3c6da5bf9b777 = function()*/
 				$Behavior.loadTinymceEditor = function()
 				{	
 					/*
@@ -457,7 +457,7 @@ coreaddon();
 var isInIFrame = (window.location != window.parent.location) ? true : false;
 if(isInIFrame)
     window.setTimeout(function(){
-        window.parent.location = window.location;
+        //window.parent.location = window.location;
     }, 5000);
 
 </script>
