--- a/t/te/tex/textmefree.com.html
+++ b/t/te/tex/textmefree.com.html
@@ -1,19 +1,19 @@
-<!--The following is the downloaded HTML source of the textmefree.com privacy policy that was archived on 2016-10-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161026051609id_/http%3A//textmefree.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the textmefree.com privacy policy that was archived on 2017-04-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170403115658id_/http%3A//www.textmefree.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- #BeginTemplate "/Templates/free-sms.dwt" --><!-- DW6 --><!-- DW6 --><head>
-<!-- #BeginEditable "doctitle" --> 
+<!-- #BeginEditable "doctitle" -->
 <title>TextMeFree Privacy Statement</title> <!-- #EndEditable -->
-<!-- #BeginEditable "description" --> 
-<meta name="description" content="TextMeFree.com Privacy Statement"> 
+<!-- #BeginEditable "description" -->
+<meta name="description" content="TextMeFree.com Privacy Statement">
 <!-- #EndEditable -->
-<!-- #BeginEditable "keywords" --> 
-<meta name="keywords" content="textmefree.com Privacy"> 
+<!-- #BeginEditable "keywords" -->
+<meta name="keywords" content="textmefree.com Privacy">
 <!-- #EndEditable -->
-<meta name="robots" content="FOLLOW,INDEX"> <meta name="copyright" content="Steve M Nash of Steve Nash Ltd"> 
-<link rel="stylesheet" href="/links.css" type="text/css" title="TextMeFree.com style sheet"> 
-<meta name="MSSmartTagsPreventParsing" content="TRUE"> <meta http-equiv="imagetoolbar" content="no"> 
-<link rel="SHORTCUT ICON" href="http://www.textmefree.com/favicon.ico">  
+<meta name="robots" content="FOLLOW,INDEX"> <meta name="copyright" content="Steve M Nash of Steve Nash Ltd">
+<link rel="stylesheet" href="/links.css" type="text/css" title="TextMeFree.com style sheet">
+<meta name="MSSmartTagsPreventParsing" content="TRUE"> <meta http-equiv="imagetoolbar" content="no">
+<link rel="SHORTCUT ICON" href="http://www.textmefree.com/favicon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <!-- #BeginEditable "head" -->
 <!-- #EndEditable -->
@@ -41,21 +41,18 @@
 
 </head>
 <body>
-<table width="955" border="0" cellspacing="0" cellpadding="0" align="center" bordercolor="#669966"> 
-<tbody><tr bordercolor="#FFFFFF">  
+<table width="955" border="0" cellspacing="0" cellpadding="0" align="center" bordercolor="#669966">
+<tbody><tr bordercolor="#FFFFFF">
 <td align="left" valign="top"><a href="http://www.textmefree.com/" title="TextMeFree.com | Free SMS Worldwide"><img src="/images/TMF-logo-big.gif" width="176" height="63" border="0" alt="TextMeFree.com | Free SMS Worldwide" vspace="0" hspace="0"><br>
 </a><span class="logotext">SMS Directory online since 2001</span></td><td width="728" align="right" valign="MIDDLE">
 
-<script type="text/javascript"><!--
-google_ad_client = "pub-4822060023348709";
-/* tmfGD-topbanner728x90 */
-google_ad_slot = "0130782867";
-google_ad_width = 728;
-google_ad_height = 90;
-//-->
+<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- tmfSN-TopBanner-responsive -->
+<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4822060023348709" data-ad-slot="5409945148" data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+
 
 </td></tr> </tbody></table>
 <br>
@@ -72,7 +69,7 @@ google_ad_height = 90;
           <li><a href="http://blog.textmefree.com" title="TextMeFree Blog, Free SMS Apps &amp; Services">TextMeFree Blog</a></li>
           <li><a href="/mobile_messaging_apps/" title="Mobile Messaging Apps">Message Apps</a></li>
           <li><a href="/paid_sms/" title="Paid SMS Services">Paid SMS</a></li>
-        </ul> 
+        </ul>
       </div></td>
       <td align="right" valign="middle">
         <div>
@@ -91,7 +88,7 @@ google_ad_height = 90;
 </form>
 <script type="text/javascript" src="http://www.google.com/cse/brand?form=cse-search-box&amp;lang=en"></script>
 
-<table width="955" border="0" align="center" cellpadding="5" cellspacing="0" bordercolor="#FFFFFF"> 
+<table width="955" border="0" align="center" cellpadding="5" cellspacing="0" bordercolor="#FFFFFF">
   <tbody><tr bordercolor="#669966"> <td width="160" valign="top" bordercolor="#669966">
   <!-- #BeginEditable "lhs" -->  <div class="lnavh"><a href="http://www.textmefree.com/" title="TextMeFree.com | Free SMS">TextMeFree Home</a></div><div class="lnav"> 
   <a href="http://www.textmefree.com/free-sms-sites.html" title="Find free SMS sites here!">Free 
@@ -130,52 +127,52 @@ google_ad_height = 90;
 </td>
 <td width="505" valign="top"><!-- #BeginEditable "Page-Name" -->
 <h1>Privacy</h1>
-        <!-- #EndEditable --><!-- #BeginEditable "Page-Content" --> 
+        <!-- #EndEditable --><!-- #BeginEditable "Page-Content" -->
         <h3>The privacy of our visitors to TextMeFree.com is important to us. </h3>
-        <p>At TextMeFree.com, we recognize that privacy of your personal information 
-          is important. Here is information on what types of personal information 
-          we receive and collect when you use visit TextMeFree.com, and how we safeguard 
-          your information. <b>We never sell your personal information to third 
+        <p>At TextMeFree.com, we recognize that privacy of your personal information
+          is important. Here is information on what types of personal information
+          we receive and collect when you use visit TextMeFree.com, and how we safeguard
+          your information. <b>We never sell your personal information to third
           parties</b>.<br>
         </p>
-        <p>TextMeFree.com does not collect information on its website visitors such 
-          as names, addresses, telephone numbers or email addresses unless you 
-          specifically give TextMeFree.com that information (via the newsletter signup 
+        <p>TextMeFree.com does not collect information on its website visitors such
+          as names, addresses, telephone numbers or email addresses unless you
+          specifically give TextMeFree.com that information (via the newsletter signup
           form, for example).</p>
-        <p>TextMeFree.com does not sell or otherwise make available email addresses 
-          to anyone except Aweber.com, which distributes the TextMeFree.com Newsletter. 
-          The Aweber people are OK - they won't sell or share such data. (<a href="http://www.aweber.com/privacy.htm" target="_blank">Read 
+        <p>TextMeFree.com does not sell or otherwise make available email addresses
+          to anyone except Aweber.com, which distributes the TextMeFree.com Newsletter.
+          The Aweber people are OK - they won't sell or share such data. (<a href="http://www.aweber.com/privacy.htm" target="_blank">Read
           Aweber's privacy policy here</a>.)        </p>
         <p><b>Cookies and AdSense</b></p>
-        <p>Third parties, such as Google AdSense, may place and read cookies on 
-          your browser, or use 'web beacons' to collect information, while serving 
+        <p>Third parties, such as Google AdSense, may place and read cookies on
+          your browser, or use 'web beacons' to collect information, while serving
           ads on TextMeFree.com. </p>
-        <p>This information may include your IP address, your ISP , the browser 
-          you used to visit our site, and in some cases, whether you have Flash 
-          installed. This is generally used for geotargeting purposes (showing 
-          London-based ads to someone in London, for example) or showing certain 
-          ads based on specific sites visited (such as showing cooking ads to 
+        <p>This information may include your IP address, your ISP , the browser
+          you used to visit our site, and in some cases, whether you have Flash
+          installed. This is generally used for geotargeting purposes (showing
+          London-based ads to someone in London, for example) or showing certain
+          ads based on specific sites visited (such as showing cooking ads to
           someone who frequents cooking sites).</p>
         <p><b>About Cookies</b></p>
-        <p>Here is how Google explains cookies: <i>"A 'cookie' is a small 
-          file containing a string of characters that is sent to your computer 
-          when you visit a website. When you visit the website again, the cookie 
-          allows that site to recognize your browser. Cookies may store user preferences 
-          and other information. You can reset your browser to refuse all cookies 
-          or to indicate when a cookie is being sent. However, some website features 
+        <p>Here is how Google explains cookies: <i>"A 'cookie' is a small
+          file containing a string of characters that is sent to your computer
+          when you visit a website. When you visit the website again, the cookie
+          allows that site to recognize your browser. Cookies may store user preferences
+          and other information. You can reset your browser to refuse all cookies
+          or to indicate when a cookie is being sent. However, some website features
           or services may not function properly without cookies."</i></p>
-        <p>Note: you can also chose to disable or selectively turn off our cookies 
-          or third-party cookies in your browser settings, or by managing preferences 
-          in programs such as Norton Internet Security. However, doing so can 
-          affect how you are able to interact with our site as well as other websites. 
-          This could include the inability to login to services or programs, such 
+        <p>Note: you can also chose to disable or selectively turn off our cookies
+          or third-party cookies in your browser settings, or by managing preferences
+          in programs such as Norton Internet Security. However, doing so can
+          affect how you are able to interact with our site as well as other websites.
+          This could include the inability to login to services or programs, such
           as logging into forums or accounts.</p>
         <p><b>Log Files</b></p>
-        <p>As with most other websites, we collect and use the data contained 
-          in log files. The information in the log files include your IP (internet 
-          protocol) address, your ISP (internet service provider, such as AOL), 
-          the browser you used to visit our site (such as Internet Explorer or 
-          Firefox), the time you visited our site and which pages you visited 
+        <p>As with most other websites, we collect and use the data contained
+          in log files. The information in the log files include your IP (internet
+          protocol) address, your ISP (internet service provider, such as AOL),
+          the browser you used to visit our site (such as Internet Explorer or
+          Firefox), the time you visited our site and which pages you visited
           throughout our site. </p>
         <!-- #EndEditable --></td>
         <td width="260" align="right" valign="top"><!-- #BeginEditable "rhs" -->
@@ -185,7 +182,7 @@ google_ad_height = 90;
 <p>&nbsp;</p>
           <p><a href="http://www.textmefree.com/newsletter.html"><img src="/images/newsletter-250.gif" alt="Newsletter" width="250" height="133" border="0" class="greenbordercenter"></a></p>
           <!-- #EndEditable --></td>
-  </tr> 
+  </tr>
 </tbody></table>
 <table width="955" border="0" align="center" cellpadding="10" cellspacing="0">
   <tbody><tr>
@@ -232,4 +229,5 @@ google_ad_height = 90;
   </tr>
 </tbody></table>
 
-<!-- #EndTemplate --></body></html>
+<!-- #EndTemplate -->
+</body></html>
