--- a/m/mu/mus/museglobal.com.html
+++ b/m/mu/mus/museglobal.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the museglobal.com privacy policy that was archived on 2016-11-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161114163554id_/http%3A//www.museglobal.com/about/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the museglobal.com privacy policy that was archived on 2017-04-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170404111914id_/http%3A//museglobal.com/about/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>MuseGlobal -- Privacy Policy</title>
@@ -165,7 +165,7 @@ MuseGlobal Inc.
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <tbody><tr>
     <td style="padding: 10px 5px 5px 20px"><a href="../"><img border="0" width="36" height="48" alt="MuseGlobal" title="MuseGlobal" src="../images/mark.png"></a></td>
-    <td style="padding: 0px 0px 5px 0px" valign="bottom" nowrap="nowrap">© 2016 MuseGlobal, Inc.</td>
+    <td style="padding: 0px 0px 5px 0px" valign="bottom" nowrap="nowrap">© 2017 MuseGlobal, Inc.</td>
     <td width="100%" align="center">
     &nbsp;
     </td>
